--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -19,10 +19,19 @@
               <% end %>
             <% end %>
             
-            <%= image_tag 'icons/comment.png', class: 'topic-index-icon' %>
+            <%= topic.favorite_users.count %>
+            <%= link_to comments_path(topic_id: topic.id) do %>
+              <%= image_tag 'icons/comment.png', class: 'topic-index-icon' %>
+            <% end %>
             <p class="topic-text">
               <%= topic.description %>
             </p>
+            <h3>コメント</h3>
+            <% topic.comments.each do |comment| %>
+              <p class="topic-text">
+                <%= comment.content %>
+              </p>
+            <% end %>
           </div>
         </div>
       </div>
