--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -3,12 +3,18 @@
     <h1 class="text-white">Micheal</h1>
     <h2 class="text-white">みーちゃんはかわいい。</h2>
     <div class="row">
-      <div class="col-md-offset-3 col-md-3">
-        <%= link_to 'Sign up', new_user_path, class: 'btn btn-block btn-white' %>
-      </div>
-      <div class="col-md-3">
-        <%= link_to 'Log in', login_path,class: 'btn btn-block btn-white' %>
-      </div>
+      <% if logged_in? %>
+        <div class="col-md-offset-3 col-md-3">
+          <%= link_to 'Log out', logout_path, method: :delete, class: 'btn btn-block btn-white' %>
+        </div>
+      <% else %>
+        <div class="col-md-offset-3 col-md-3">
+          <%= link_to 'Sign up', new_user_path, class: 'btn btn-block btn-white' %>
+        </div>
+        <div class="col-md-3">
+          <%= link_to 'Log in', login_path, class: 'btn btn-block btn-white' %>
+        </div>
+      <% end %>
     </div>
   </div>
 </div>
