--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -5,7 +5,7 @@
         <div class="col-md-6 col-md-offset-3">
           <div class="topic-index-single">
             <h2 class="topic-author">
-              <%= topic.user.name %>
+              <%= link_to topic.user.name, user_path(topic.user.id) %>
             </h2>
             <%= image_tag topic.image.url %>
             
@@ -28,6 +28,9 @@
             </p>
             <h3>コメント</h3>
             <% topic.comments.each do |comment| %>
+              <h2 class="topic-author">
+                <%= link_to comment.user.name, user_path(comment.user.id)  %>
+              </h2>
               <p class="topic-text">
                 <%= comment.content %>
               </p>
