--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,11 +4,12 @@
       <div class="col-md-6 col-md-offset-3">
         <div class="topic-index-single">
           <h2 class="topic-author">
-             <%= @user.name %>
+            <%= @user.name %>
           </h2>
-
+          <p class="topic-text">
+            <%= @user.profile %>
+          </p>
           <%= render 'relationships/follow_button', user: @user %>
-
         </div>
       </div>
     </div>
