スタンプ機能

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,6 +33,9 @@
                 <%= image_tag "icons/camera.png" %>
               <% end %>
             </li>
+              <%= link_to stamps_index_path do %>
+                <%= image_tag "icons/stamp.png" %>
+              <% end %>
             <li>
               <%= link_to logout_path, method: :delete do %>
                 <%= image_tag "icons/logout.png" %>
