スタンプ機能

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,7 +34,7 @@
               <% end %>
             </li>
               <%= link_to stamps_index_path do %>
-                <%= image_tag "icons/stamp.png" %>
+                <%= image_tag "icons/stamp.svg" %>
               <% end %>
             <li>
               <%= link_to logout_path, method: :delete do %>
