--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -22,7 +22,7 @@
             
             <% if !topic.stamp_users.include?(current_user) %>
               <%= link_to stamps_path(topic_id: topic.id), method: :post do %>
-                <%= image_tag 'icons/stamp.png', class: 'topic-index-icon' %>
+                <%= image_tag 'icons/stamp.svg', class: 'topic-index-icon' %>
               <% end %>
             <% end %>
             
