モーダルウィンドウ

--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -21,9 +21,7 @@
             <%= topic.favorite_users.count %>
             
             <% if !topic.stamp_users.include?(current_user) %>
-              <%= link_to stamps_path(topic_id: topic.id), method: :post do %>
-                <%= image_tag 'icons/stamp.svg', class: 'topic-index-icon' %>
-              <% end %>
+              <%= render 'stamps/modal', topic: @topic %>
             <% end %>
             
             <%= link_to comments_path(topic_id: topic.id) do %>
