--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -21,7 +21,7 @@
             <%= topic.favorite_users.count %>
             
             <% if !topic.stamp_users.include?(current_user) %>
-              <%= render 'stamps/modal', topic: @topic %>
+              <%= render 'modal', topic: @topic %>
             <% end %>
             
             <%= link_to comments_path(topic_id: topic.id) do %>
