--- a/app/views/stamps/_modal.html.erb
+++ b/app/views/stamps/_modal.html.erb
@@ -8,6 +8,8 @@
   <div class="modal-content">
     <p>
       <%= image_tag 'icons/stamp.svg', class: 'topic-index-icon' %>
+      <%= image_tag 'icons/stamp.svg', class: 'topic-index-icon' %>
+      <%= image_tag 'icons/stamp.svg', class: 'topic-index-icon' %>
     </p>
     <a class="js-modal-close" href="">閉じる</a>
   </div><!--modal-inner-->
