--- a/app/views/stamps/_modal.html.erb
+++ b/app/views/stamps/_modal.html.erb
@@ -13,6 +13,12 @@
       <%= image_tag 'icons/stamp.svg', class: 'topic-index-icon' %>
       <%= image_tag 'icons/stamp.svg', class: 'topic-index-icon' %>
       <%= image_tag 'icons/stamp.svg', class: 'topic-index-icon' %>
+      <%= image_tag 'icons/stamp.svg', class: 'topic-index-icon' %>
+      <%= image_tag 'icons/stamp.svg', class: 'topic-index-icon' %>
+      <%= image_tag 'icons/stamp.svg', class: 'topic-index-icon' %>
+      <%= image_tag 'icons/stamp.svg', class: 'topic-index-icon' %>
+      <%= image_tag 'icons/stamp.svg', class: 'topic-index-icon' %>
+      <%= image_tag 'icons/stamp.svg', class: 'topic-index-icon' %>
     </p>
     <a class="js-modal-close" href="">閉じる</a>
   </div><!--modal-inner-->
